# qyron-tui

./: Cargo.toml  Pipfile
crownet/: Cargo.toml
crownet/src/: lib.rs  main.rs  selector.rs  text_box.rs
py_rpc/: Cargo.toml  Pipfile
py_rpc/python/: connect.py
py_rpc/src/: lib.rs
python/: connect.py
src/: main.rs
