[package]
name = "crownet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# notcurses = "3.2.3"
notcurses = { path = "../../notcurses-rs" }
libnotcurses-sys = { path = "../../libnotcurses-sys" }
py_rpc = { path = "../py_rpc" }
