[package]
name = "crownet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notcurses = "3.6.0"
# notcurses = { path = "../../notcurses-rs" }
# libnotcurses-sys = { path = "../../libnotcurses-sys" }
libnotcurses-sys = "3.11.0"
py_rpc = { path = "../py_rpc" }
strum = "0.25"
strum_macros = "0.25"
